5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1582_579.log
== TEST (2019-05-12 22:41:42) 
-- CODE:
x = input(' digite uma frase: ')
print("qual e a frase")
-- OUTPUT:
qual e a frase
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:42:45) 
-- CODE:
x = input(' digite uma frase: ')
print(" a UFAM tem", 2016 - x " anos de fundacao")
-- ERROR:
File "XXXX", line 2
    print(" a UFAM tem", 2016 - x " anos de fundacao")
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:45:20) 
-- CODE:
x = input(' digite uma frase: ')
print( " a ufam tem , 2016 - 1909, "anos de fundacao.)
-- ERROR:
File "XXXX", line 2
    print( " a ufam tem , 2016 - 1909, "anos de fundacao.)
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:46:44) 
-- CODE:
x = input(' digite uma frase: ')
uf= a ufam tem , 2016 - 1909, anos de fundacao
print('qual a frase' , uf)
-- ERROR:
File "XXXX", line 2
    uf= a ufam tem , 2016 - 1909, anos de fundacao
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:47:49) 
-- CODE:
x = input(' digite uma frase: ')
uf= 2016 - 1909
print('a ufam tem' , uf)
-- OUTPUT:
a ufam tem 107
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:48:54) 
-- CODE:
x = input(' digite uma frase: ')
uf= 2016 - 1909
print('a ufam tem' , uf , " anos de fundacao")
-- OUTPUT:
a ufam tem 107  anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 22:49:13) 
-- CODE:
x = input(' digite uma frase: ')
uf= 2016 - 1909
print('a ufam tem' , uf , " anos de fundacao")
-- EXECUTION TIME:
0.144591
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
a ufam tem 107  anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:49:35) 
-- CODE:
uf= input(' digite uma frase: ')
uf= 2016 - 1909
print('a ufam tem' , uf , " anos de fundacao")
-- OUTPUT:
a ufam tem 107  anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:50:04) 
-- CODE:
uf= input(' digite uma frase: ')
uf= 2016 - 1909
print('a UFAM tem' , uf , " anos de fundacao")
-- OUTPUT:
a UFAM tem 107  anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:50:24) 
-- CODE:
uf= input(' digite uma frase: ')
uf= 2016 - 1909
print('A UFAM tem' , uf , " anos de fundacao")
-- OUTPUT:
A UFAM tem 107  anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 22:50:39) 
-- CODE:
uf= input(' digite uma frase: ')
uf= 2016 - 1909
print('A UFAM tem' , uf , " anos de fundacao")
-- EXECUTION TIME:
0.123399
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107  anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:50:55) 
-- CODE:
uf= input(' digite uma frase: ')
uf= 2016 - x
print('A UFAM tem' , uf , " anos de fundacao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    uf= 2016 - x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:51:21) 
-- CODE:
uf= input(' digite uma frase: ')
f= 2016 - uf
print('A UFAM tem' , uf , " anos de fundacao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    f= 2016 - uf
TypeError: unsupported operand type(s) for -: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:51:46) 
-- CODE:
uf= input(' digite uma frase: ')
f= 2016- xxxx
print('A UFAM tem' , uf , " anos de fundacao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    f= 2016- xxxx
NameError: name 'xxxx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:52:03) 
-- CODE:
uf= input(' digite uma frase: ')
f= 2016-1909
print('A UFAM tem' , uf , " anos de fundacao")
-- OUTPUT:
A UFAM tem xxx  anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 22:52:15) 
-- CODE:
uf= input(' digite uma frase: ')
f= 2016-1909
print('A UFAM tem' , uf , " anos de fundacao")
-- EXECUTION TIME:
0.150284
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem xxx  anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 22:52:22) 
-- CODE:
uf= input(' digite uma frase: ')
f= 2016-1909
print('A UFAM tem' , uf , " anos de fundacao")
-- EXECUTION TIME:
0.20268
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem xxx  anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 22:52:22) 
-- CODE:
uf= input(' digite uma frase: ')
f= 2016-1909
print('A UFAM tem' , uf , " anos de fundacao")
-- EXECUTION TIME:
0.133704
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem xxx  anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 16:05:42) 
-- CODE:
print('A UFAM tem' , 2016-1909, 'anos de fundacao.')
-- EXECUTION TIME:
0.855808
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
